@@ -14,10 +14,10 @@ index 772bd2a7ea..2b345c854c 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 86cbd464bb..6d64928bd6 100644
+index e8d47e0b17..a1431b127a 100644
 --- a/Changes
 +++ b/Changes
-@@ -519,6 +519,16 @@ OCaml 5.0
+@@ -524,6 +524,16 @@ OCaml 5.0
  - #11417: Fix regression allowing virtual methods in non-virtual classes.
    (Leo White, review by Florian Angeletti)
  
@@ -34,7 +34,7 @@ index 86cbd464bb..6d64928bd6 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -554,13 +564,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -559,13 +569,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -50,7 +50,7 @@ index 86cbd464bb..6d64928bd6 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -664,6 +674,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -669,6 +679,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -60,7 +60,7 @@ index 86cbd464bb..6d64928bd6 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -923,6 +936,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -928,6 +941,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -7596,7 +7596,7 @@ index 0000000000..79c81123af
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..a27695f744
+index 0000000000..d2ab2c89fb
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,7549 @@
@@ -7616,10 +7616,10 @@ index 0000000000..a27695f744
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 86cbd464bb..6d64928bd6 100644
++index e8d47e0b17..a1431b127a 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -519,6 +519,16 @@ OCaml 5.0
++@@ -524,6 +524,16 @@ OCaml 5.0
 + - #11417: Fix regression allowing virtual methods in non-virtual classes.
 +   (Leo White, review by Florian Angeletti)
 + 
@@ -7636,7 +7636,7 @@ index 0000000000..a27695f744
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -554,13 +564,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -559,13 +569,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -7652,7 +7652,7 @@ index 0000000000..a27695f744
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -664,6 +674,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -669,6 +679,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -7662,7 +7662,7 @@ index 0000000000..a27695f744
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -923,6 +936,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -928,6 +941,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
